# ThePolynomialXYZ

./: CMakeLists.txt  README.md  Алгебра полиномов.pptx
Project1/: Project1.sln  Алгебра полиномов.pptx
Project1/Project1/: Funks.h  MyForm.cpp  MyForm.h  Project1.vcxproj  Project1.vcxproj.filters
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.vcxproj.FileListAbsolute.txt  Project1.vcxproj.GenerateResource.cache
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: function.cmake
gtest/: CMakeLists.txt
lib_HashOpenShuffle/: CMakeLists.txt  lib_HashOpenShuffle.h
lib_HashTabList/: CMakeLists.txt  lib_HashTabList.h
lib_LinTabList/: CMakeLists.txt  lib_LinTabList.h
lib_LinTabMass/: CMakeLists.txt  lib_LinTabMass.h
lib_OrdTabMass/: CMakeLists.txt  lib_OrdTabMass.h
lib_StackFromList/: CMakeLists.txt  StackFromList.h
lib_TabSearchTree/: CMakeLists.txt  lib_TabSearchTree.h
lib_TableInterface/: CMakeLists.txt  lib_TableInterface.h
lib_list/: list.cpp  list.h
lib_polinom/: lib_polinom.h
lib_postfix/: CMakeLists.txt  lib_postfix.h
lib_stack/: stack.h
main/: main.cpp
tests/: test_HashOpenShufle.cpp  test_HashTabList.cpp  test_LinTabList.cpp  test_LinTabMass.cpp  test_OrdTabMass.cpp  test_TabSearchTree.cpp  test_polinom.cpp
