# указывайте последнюю доступную вам версию CMake
cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

# название проекта
project(ProgrammingLabsWork_2022_2023)

# затем следует список инструкций для подключения проектов из подкаталогов

include(cmake/function.cmake)    # подхватываем функции, реализованные в файле function.cmake
                                 # для простоты мы объединили наборы команд для создания статической библиотеки
								 # и для создания исполняемого проекта в отдельные функции

add_subdirectory(lib_example)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_example
add_subdirectory(lib_matrix)       # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_matrix
add_subdirectory(lib_stack)        # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_stack 
add_subdirectory(lib_queue)	   # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_queue
add_subdirectory(lib_QueueFromList)# подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_QueuekFromList
add_subdirectory(lib_priorityList) # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_priorityList
add_subdirectory(lib_QueuePriority)# подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_QueuePrioritys
add_subdirectory(lib_list)	   # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_list
add_subdirectory(lib_StackFromList)# подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_StackFromList
add_subdirectory(lib_DSU)          # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_DSU
add_subdirectory(lib_HashOpenShuffle)
add_subdirectory(lib_HashTabList)
add_subdirectory(lib_LinTabList)
add_subdirectory(lib_LinTabMass)
add_subdirectory(lib_OrdTabMass)
add_subdirectory(lib_TabSearchTree)
add_subdirectory(lib_polinom)
add_subdirectory(lib_postfix)
add_subdirectory(main)             # подключаем дополнительный CMakeLists.txt из подкаталога с именем main

option(BTEST "build test?" ON)   # указываем подключаем ли google-тесты (ON или YES) или нет (OFF или NO)

if(BTEST)                        # если тесты подключены
    add_subdirectory(gtest)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем gtest
    add_subdirectory(tests)      # подключаем дополнительный CMakeLists.txt из подкаталога с именем test
endif()
